# Simjot

./: .gitignore  .gitmodules  API.md  AUTHOR_NOTE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  NOTE.md  README.md  README_BUILD.md  SECURITY.md  TESTING.md  TestCombo.java  TestTrans.java  alljava.txt  compile-native.sh  create-icon.sh  install-simjot.sh  javafiles.txt  package_simjot.bat  package_simjot_installer.bat  package_simjournal.bat  package_simjournal.ps1  package_simjournal_installer.bat  run.sh  simjot.desktop
Simjot/src/main/haskell/: simjot-poetry.cabal
Simjot/src/main/haskell/cbits/: simjot_bridge.c
Simjot/src/main/haskell/src/Simjot/: Poetry.hs
Simjot/src/main/haskell/test/: Main.hs
Simjot/src/main/native/: CMakeLists.txt  PROFILER_README.md  build.sh  build_profiler.sh  libsimjot_native.dylib  simjot_native.c  simjot_profiler
Simjot/src/main/native/include/: simjot_native.h
Simjot/src/main/native/src/analytics/: mood_analytics.c  mood_analytics.cpp  mood_parser.c  vocab_analyzer.c
Simjot/src/main/native/src/anim/: anim_math.c
Simjot/src/main/native/src/cache/: lru_cache.cpp
Simjot/src/main/native/src/cloud/: icloud_conflict.mm  icloud_progress.mm  icloud_sync.mm  icloud_sync_batch.mm  icloud_watcher.mm
Simjot/src/main/native/src/collections/: collections.cpp
Simjot/src/main/native/src/compression/: compression.c  deflate.c  deflate.h  fast_compress.cpp
Simjot/src/main/native/src/concurrent/: task_queue.cpp
Simjot/src/main/native/src/core/: core.c
Simjot/src/main/native/src/crypto/: sha256.c
Simjot/src/main/native/src/datetime/: datetime_utils.c
Simjot/src/main/native/src/editing/: undo_redo_manager.cpp
Simjot/src/main/native/src/encoding/: encoding_utils.c
Simjot/src/main/native/src/font/: font_cli.c  font_import.cpp  font_metrics.cpp  font_raster.cpp  font_serialize.cpp  font_strokes.cpp  font_types.h
Simjot/src/main/native/src/fs/: fs_ops.c
Simjot/src/main/native/src/graphics/: mood_graphics.c
Simjot/src/main/native/src/image/: accent_color.cpp  background_cache.c  image_ops.c  image_scale.c  macos_image_pipeline.mm  viewport_cache.cpp
Simjot/src/main/native/src/input/: hotkey_manager.cpp  tablet_input.mm  tablet_types.h
Simjot/src/main/native/src/io/: autosave_manager.cpp  dir_list.c  file_io.c  file_meta.c  macos_power_assertion.mm  macos_security_bookmarks.mm
Simjot/src/main/native/src/json/: fast_json.cpp  json_parser.c
Simjot/src/main/native/src/math/: math_utils.cpp
Simjot/src/main/native/src/memory/: memory_pool.c  pool_allocator.cpp
Simjot/src/main/native/src/monitoring/: perf.c
Simjot/src/main/native/src/notetaking/: notetaking_utils.c
Simjot/src/main/native/src/poetry/: dictionary.cpp  poetry_analysis.cpp  rhyme.c  rhyme_engine.cpp  syllables.c
Simjot/src/main/native/src/profiler/: profiler.c
Simjot/src/main/native/src/render/: lasso_selector.cpp  offscreen_buffer.cpp  stroke_engine.cpp  stroke_optimizer.cpp
Simjot/src/main/native/src/search/: fast_search.cpp  macos_spotlight_search.mm  search_batch.c
Simjot/src/main/native/src/setup/: setup_init.c
Simjot/src/main/native/src/simd/: simd_ops.c
Simjot/src/main/native/src/spell/: autocorrect.c  spell_dict.c  spell_suggest.c
Simjot/src/main/native/src/text/: link_detector.cpp  pattern_match.c  string_ops.c  text_utils.c
Simjot/src/main/native/src/ui/: aero_effects.c  macos_quicklook.mm  macos_system.mm  menubar_service.mm  ui_scale.c
Simjot/src/main/native/src/util/: file_utils.c  math_utils.c  text_utils.c
Simjot/src/main/native/src/watchdog/: watchdog.c
Simjot/src/main/native/tests/: profiler_cli.c  simjot_native_cli.c
(+833 files in other folders)
