cabal-version:      3.0
name:               simjot-poetry
version:            1.0.0
synopsis:           Functional poetry analysis library for Simjot
description:        Pure functional poetry analysis using Haskell,
                    integrated with Simjot's native C/C++ modules via FFI.
license:            NONE
author:             S1mplector
maintainer:         contact@simjot.app
category:           Text, Poetry
build-type:         Simple

library
  exposed-modules:
    Simjot.Poetry
    Simjot.Poetry.Analysis
    Simjot.Poetry.Rhyme
    Simjot.Poetry.Meter
    Simjot.Poetry.SoundDevices
    Simjot.Poetry.FFI
  other-modules:
    Simjot.Poetry.Internal
  hs-source-dirs:     src
  c-sources:          cbits/simjot_bridge.c
  include-dirs:       ../native/include
  build-depends:
    base >= 4.14 && < 5,
    text >= 1.2 && < 3,
    containers >= 0.6 && < 1,
    vector >= 0.12 && < 1,
    bytestring >= 0.10 && < 1,
    mtl >= 2.2 && < 3,
    transformers >= 0.5 && < 1
  default-language:   Haskell2010
  ghc-options:        -Wall -O2 -fexpose-all-unfoldings
  extra-libraries:    simjot_native

executable simjot-poetry-test
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:
    base >= 4.14 && < 5,
    simjot-poetry,
    text
  default-language:   Haskell2010
